клиент водител авторизатсия выход и тд
